[project]
name = "random-llm-scripts"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "<3.12"
dependencies = [
    "click>=6.7",
    "protobuf>=3.17.3",
    "sentencepiece>=0.2.0",
    "termcolor>=1.1.0",
    "torch>=1.2.0",
    "transformers>=2.3.0",
]
